--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,27 @@
-# Environment Variables Template
-# Copy this file to .env and fill in your actual values
+# Google Gemini API
+# Get your API key from: https://makersuite.google.com/app/apikey
+VITE_GEMINI_API_KEY=your_gemini_api_key_here
 
-# Supabase Configuration
+# Firebase Authentication
+# Get from: https://console.firebase.google.com/
+VITE_FIREBASE_API_KEY=your_firebase_api_key
+VITE_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=your-project-id
+VITE_FIREBASE_STORAGE_BUCKET=your-project.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
+VITE_FIREBASE_APP_ID=your_app_id
+VITE_FIREBASE_MEASUREMENT_ID=your_measurement_id
+
+# Supabase Database & Storage
+# Get from: https://supabase.com/dashboard/project/_/settings/api
 VITE_SUPABASE_URL=https://your-project.supabase.co
-VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
-
-# Stripe Configuration
-VITE_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 
 # App Configuration
 VITE_APP_URL=http://localhost:5173
 
-# Analytics (Optional)
-VITE_PLAUSIBLE_DOMAIN=resumeroaster.com
+# Rate Limiting
+VITE_MAX_UPLOADS_PER_DAY=10
+
+# Credits System
+VITE_FREE_TIER_CREDITS=10
